# ChangeLog for media-libs/jasper
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/jasper/ChangeLog,v 1.32 2007/05/20 17:01:34 markusle Exp $

*jasper-1.900.1-r1 (20 May 2007)

  20 May 2007; Markus Dittrich <markusle@gentoo.org>
  +files/jasper-overflow-fix.patch, +jasper-1.900.1-r1.ebuild:
  Added patch to fix overflow in jpc/jpc_cs.c (see bug #179159).

  15 Feb 2007; Fabian Groffen <grobian@gentoo.org> jasper-1.701.0.ebuild,
  jasper-1.900.1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

*jasper-1.900.1 (23 Jan 2007)

  23 Jan 2007; Patrick Kursawe <phosphan@gentoo.org> -jasper-1.900.0.ebuild,
  +jasper-1.900.1.ebuild:
  Yet another version bump.

*jasper-1.900.0 (29 Dec 2006)

  29 Dec 2006; Patrick Kursawe <phosphan@gentoo.org> +jasper-1.900.0.ebuild:
  Version bump.

  04 Sep 2006; Joshua Kinard <kumba@gentoo.org> jasper-1.701.0.ebuild:
  Marked stable on mips.

  25 Aug 2006; Patrick Kursawe <phosphan@gentoo.org> jasper-1.701.0.ebuild:
  Forgot 'set' in the eselect line

  14 Aug 2006; Patrick Kursawe <phosphan@gentoo.org> jasper-1.701.0.ebuild:
  Added a hint about potential OpenGL trouble (bug #133609) if make fails.

  17 Jul 2006; Patrick Kursawe <phosphan@gentoo.org> jasper-1.701.0.ebuild:
  Adding optional GLUT dependency, see bug #139735

  14 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Add elibtoolize and mark ~x86-fbsd.

  14 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> jasper-1.701.0.ebuild:
  Add elibtoolize and mark ~x86-fbsd.

  21 Feb 2006; Fabian Groffen <grobian@gentoo.org> jasper-1.701.0.ebuild:
  Marked ~ppc-macos (bug #74101)

  17 Feb 2006; Patrick Kursawe <phosphan@gentoo.org> jasper-1.701.0.ebuild:
  Fixing dependencies, bug #123068

  12 Sep 2005; Aron Griffis <agriffis@gentoo.org> jasper-1.701.0.ebuild:
  Mark 1.701.0 stable on alpha

  24 Aug 2005; Aron Griffis <agriffis@gentoo.org> jasper-1.701.0.ebuild:
  stable on ia64
