@@ -1,6 +1,5 @@
 AUX jasper-overflow-fix.patch 683 RMD160 d70c756f834f27c60b2880490d015db6ef6f8f00 SHA1 7d69151497692611c59c5577e97de8c5089f8af0 SHA256 57b0f78ce02af1dce674664c030d4e9432333a7589b43c042a5b0c730eb3d611
 DIST jasper-1.900.1.zip 1415752 RMD160 fb2c188abf5b8c297078ac1f913101734f72db5c SHA1 9c5735f773922e580bf98c7c7dfda9bbed4c5191 SHA256 6b905a9c2aca2e275544212666eefc4eb44d95d0a57e4305457b407fe63f9494
-EBUILD jasper-1.900.1-r1.ebuild 1109 RMD160 51c2974ceef617632cb87fa9ffe2e7e919096121 SHA1 04c1bf3cc730310e6686d0e8db9acbe8fbb22f63 SHA256 e5bd6858df5497d6156b1e0c37ed446949776bd91697d799967a449937dba38e
-EBUILD jasper-1.900.1.ebuild 1037 RMD160 33d706c73b40071c771bc9e3720b1dc98e2d5a0e SHA1 01ed399042e0a477e1ca2c3645d063cff18a1926 SHA256 0ce310f317f82518f0ee2f5490f780e9a86ae40a00591643d32cde3660b4624d
-MISC ChangeLog 3878 RMD160 fd7b34accbce3add5da6ab5fc16a8af75df5aef0 SHA1 53ef58eaefd0afbe690d0d207ace6f5202af60a8 SHA256 c26dc9eae76162ebb73b555d0bad6f82af89820fb59e8fd10b492300ffc948b3
+EBUILD jasper-1.900.1-r1.ebuild 1261 RMD160 ee33c87c6ee89b76d4265fde290a71a9ef4ce9f2 SHA1 95ed3570533c2c7f4734824fe297e897a1e9fcaa SHA256 e79d92c945525b08994186815aeb4baacd237cbe066369fd22a9e8025dd5f8a7
+MISC ChangeLog 4196 RMD160 c0ac201a68c7b80fbedf842a4fbcd77ac0806af9 SHA1 5496253138790ec861a35dad0aced69ef5db060a SHA256 06380c45a2cef47c69f2d39d23e37ead1ef12c8cf3b29965f19d79125fa90b3b
 MISC metadata.xml 301 RMD160 91daefdb588e2984774e49daf182936ede2e29f4 SHA1 8d3f29760c4369cb43ae6bc5a8d3032ad1f68d28 SHA256 e10af83464344d5ff709f593848ca25638eb8cfed47fa49ef44b01fdc9a5db32
